<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Productos.ProductosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--//**** Caja 1 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/papel_mantequilla" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro1"/>

                    <TextView
                        android:id="@+id/txDesp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro1"/>

                    <TextView
                        android:id="@+id/txPre1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro1"/>

                </LinearLayout>
            </LinearLayout>

            <!--//**** Caja 2 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/morral_junior" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro2"/>

                    <TextView
                        android:id="@+id/txDesp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro2"/>

                    <TextView
                        android:id="@+id/txPre2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro2"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 3 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/prismacolor_132" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro3"/>

                    <TextView
                        android:id="@+id/txDesp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro3"/>

                    <TextView
                        android:id="@+id/txPre3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro3"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 4 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP4"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/agenda_2022" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro4"/>

                    <TextView
                        android:id="@+id/txDesp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro4"/>

                    <TextView
                        android:id="@+id/txPre4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro4"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 5 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP5"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/cuaderno_grande" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro5"/>

                    <TextView
                        android:id="@+id/txDesp5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro5"/>

                    <TextView
                        android:id="@+id/txPre5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro5"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 6 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img6"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/marcadores_tela" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_pro6"/>

                    <TextView
                        android:id="@+id/txDesp6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_pro6"/>

                    <TextView
                        android:id="@+id/txPre6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/precios_pro6"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>