<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Servicios.ServiciosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--//**** Caja 1 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/fotocofias" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_ser1"/>

                    <TextView
                        android:id="@+id/txDesp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_ser1"/>

                </LinearLayout>
            </LinearLayout>

            <!--//**** Caja 2 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/impresion" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_ser2"/>

                    <TextView
                        android:id="@+id/txDesp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_ser2"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 3 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/cursosdibujo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_ser3"/>

                    <TextView
                        android:id="@+id/txDesp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_ser3"/>

                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 4 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP4"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/ventamayor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_ser4"/>

                    <TextView
                        android:id="@+id/txDesp4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_ser4"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>