<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Sucursales.SucursalesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--//**** Caja 1 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/mapa" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_sucur1"/>

                    <TextView
                        android:id="@+id/txDesp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_sucur1"/>

                </LinearLayout>
            </LinearLayout>

            <!--//**** Caja 2 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/mapa" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_sucur2"/>

                    <TextView
                        android:id="@+id/txDesp2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_sucur2"/>
                </LinearLayout>
            </LinearLayout>
            <!--//**** Caja 3 *******//-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:src="@drawable/mapa" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txTp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/nom_sucur3"/>

                    <TextView
                        android:id="@+id/txDesp3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/des_sucur3"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>